src/app/shared/components/template/components/audio/audio.component.scss
@use "/src/theme/mixins";

$control-background: var(--audio-control-background, var(--ion-color-primary-500));

.container-player {
  background: var(--ion-color-primary-contrast);
  border: var(--ion-border-standard);
  box-sizing: border-box;
  box-shadow: var(--ion-default-box-shadow);
  border-radius: var(--ion-border-radius-standard);
  padding: var(--regular-padding);
  display: flex;
  position: relative;
  flex-direction: column;
  .top-row {
    @include mixins.flex-space-between;
    .title_and_help {
      width: 100%;
      display: flex;
      align-items: center;
      justify-content: space-between;
      min-height: var(--audio-title-and-help-height);
      h3 {
        margin: 0;
        margin-right: var(--small-margin);
        color: var(--ion-color-primary);
        max-width: 85%;
        font-weight: var(--font-weight-bold);
        font-size: var(--audio-title-size);
      }
      .audio-help {
        color: var(--ion-color-primary);
        height: var(--help-icon-standard-size);
        width: var(--help-icon-standard-size);
      }
    }
  }
  .progress-block {
    .audio-range {
      --bar-background-active: #{$control-background};
      --bar-background: transparent;
      --bar-height: 4px;
      --bar-border-radius: var(--ion-border-radius-secondary);
      --knob-size: 0px;
      --pin-background: var(--ion-color-primary);
      --knob-background: var(--ion-color-primary);
      padding-inline: 0;
    }

    ion-range::part(bar) {
      border: var(--ion-border-thin-standard);
      height: var(--audio-bar-height);
    }

    ion-range::part(bar-active) {
      top: 23px;
      margin-left: 3px;
    }
  }
  .time {
    margin-top: -12px;
    @include mixins.flex-space-between;
    &-value {
      font-size: var(--font-size-text-large);
      line-height: var(--line-height-text-small);
      color: var(--ion-color-primary);
    }
  }
  .controls {
    @include mixins.flex-space-between;
    min-width: var(--audio-controls-width);
    align-self: center;
    .rewind,
    .forward {
      ion-icon {
        font-size: var(--icon-size-largest);
        color: var(--ion-color-primary);
      }
    }
    .rewind {
      ion-icon {
        transform: rotate(180deg);
      }
    }
    .play {
      .btn-play {
        @include mixins.large-square;
        --background: #{$control-background};
        --border-radius: var(--ion-border-radius-rounded);
        --padding: 0;
        --box-shadow: var(--ion-default-box-shadow);
        ion-icon {
          position: absolute;
          font-size: var(--icon-size-medium);
          // Fine-tune spacing of 'play' icon so that triangle appears to be centred visually
          &.play-icon {
            padding-left: 4px;
          }
        }
      }
    }
  }
  .error-text {
    margin: var(--small-margin) 0;
    text-align: center;
  }
}
.disabled {
  pointer-events: none;
}

